--- a/compose-dev.yaml
+++ b/compose-dev.yaml
@@ -2,7 +2,9 @@ version: '3.8'
 
 services:
   web:
-    image: brettt89/silverstripe-web:php8.1-apache
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: silverstripe-web
     volumes:
       - ./:/var/www/html
