--- a/compose-dev.yaml
+++ b/compose-dev.yaml
@@ -8,6 +8,7 @@ services:
     container_name: silverstripe-web
     volumes:
       - ./:/var/www/html
+      - "/var/run/docker.sock:/var/run/docker.sock"
     ports:
       - "8080:80"
     environment:
