Fixed Issues with dev container

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,21 @@
-# For a complete list of core environment variables see
-# https://docs.silverstripe.org/en/5/getting_started/environment_management/#core-environment-variables
+# .env.example
 
-# DB credentials
+# SilverStripe Environment Configuration
+SS_ENVIRONMENT_TYPE=dev
+SS_BASE_URL="http://localhost:8080"
+SS_DEFAULT_ADMIN_USERNAME="admin"
+SS_DEFAULT_ADMIN_PASSWORD="password"
+
+# Database Configuration
 SS_DATABASE_CLASS="MySQLDatabase"
-SS_DATABASE_SERVER="localhost"
-SS_DATABASE_USERNAME="<user>"
-SS_DATABASE_PASSWORD="<password>"
-SS_DATABASE_NAME="<database>"
+SS_DATABASE_SERVER="db"
+SS_DATABASE_NAME="silverstripe"
+SS_DATABASE_USERNAME="silverstripe"
+SS_DATABASE_PASSWORD="password"
 
-# WARNING: in a live environment, change this to "live" instead of dev
-SS_ENVIRONMENT_TYPE="dev"
+# SMTP Configuration for Mailpit
+SS_SEND_ALL_EMAILS_FROM="no-reply@example.com"
+SS_SMTP_SERVER="mailpit"
+SS_SMTP_PORT=1025
+
+DOCUMENT_ROOT="/var/www/html/public"
