Added .env.dev and Bugsnag to the project.

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,8 @@ SS_SMTP_SERVER="mailpit"
 SS_SMTP_PORT=1025
 
 DOCUMENT_ROOT="/var/www/html/public"
+
+BUGSNAG_API_KEY="TODO: FILLOUT"
+BUGSNAG_STANDARD_SEVERITY="warning"
+BUGSNAG_ACTIVE="true"
+BUGSNAG_RELEASE_STAGE="development"
