--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 
 # SilverStripe Environment Configuration
 SS_ENVIRONMENT_TYPE=dev
-SS_BASE_URL="http://localhost:8080"
+SS_BASE_URL="http://localhost"
 SS_DEFAULT_ADMIN_USERNAME="admin"
 SS_DEFAULT_ADMIN_PASSWORD="password"
 
