--- a/.Docker/docker-php-ext-xdebug.ini
+++ b/.Docker/docker-php-ext-xdebug.ini
@@ -7,3 +7,4 @@ xdebug.client_host=host.docker.internal
 xdebug.client_port=9003
 xdebug.log=/var/www/html/xdebug.log
 xdebug.log_level=0
+xdebug.idekey=docker
